1.20.1 backport (Forge still broken)